# NonEuclideanRayTracing

./: .gitignore  CMakeLists.txt  README.md  run_all.sh  tmp.txt
executable_src/: demo1.cpp  demo2.cpp  demo3.cpp  test_camera.cpp  test_sc_geometry.cpp  test_scmetric_dg.cpp
include/: ball.hpp  camera.hpp  christoffel.hpp  geodesic.hpp  geometry.hpp  group.hpp  hit.hpp  metric.hpp  object.hpp  observer.hpp  plane.hpp  ray.hpp  scene.hpp  texture.hpp  trajectory.hpp  trojectory.hpp  utils.hpp
script/: compile_video.py
src/: ball.cpp  camera.cpp  christoffel.cpp  geodesic.cpp  geometry.cpp  group.cpp  hit.cpp  main.cpp  metric.cpp  object.cpp  observer.cpp  plane.cpp  ray.cpp  scene.cpp  texture.cpp  trajectory.cpp  utils.cpp
